# Language-Diffusion-Model

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml  default.yaml  toy_configs.yaml
src/: __init__.py  config.py  dataset.py  datatypes.py  loss.py  masking_strategy.py  model.py  scheduler.py  tokenizer.py  trainer.py  transformer.py
tests/: __init__.py  test_loss.py  test_masking_strategy.py
